--- a/travel.html
+++ b/travel.html
@@ -57,6 +57,7 @@
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="dot"></div>
                         </div>                    
                         <div class="cards">
                             <div class="card mid">                        
