--- a/travel.html
+++ b/travel.html
@@ -24,9 +24,9 @@
                         <div class="lines">
                         <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
