--- a/travel.html
+++ b/travel.html
@@ -25,7 +25,7 @@
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
-                        <div class="line"></div>
+                        <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
