--- a/travel.html
+++ b/travel.html
@@ -64,6 +64,9 @@
                                 <p>Gather at Thanh Buoi bus station</p>
                                 <p>Gather at Thanh Buoi bus station</p>
                             </div>
+                            <div class="card mid">                        
+                                
+                            </div>
 
                             <!-- 10th Sep -->
                             <div class="card mid">
