--- a/travel.html
+++ b/travel.html
@@ -24,6 +24,7 @@
                         <div class="lines">
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
