--- a/travel.html
+++ b/travel.html
@@ -61,10 +61,14 @@
                             <div class="card mid">                        
                                 <h4 style="color: red">9th Sep 22:30 Evening</h4>
                                 <p>Gather at Thanh Buoi bus station</p>
+                            </div>
+                            <div class="card mid">                        
+                                <h4 style="color: red">9th Sep 22:30 Evening</h4>
                                 <p>Gather at Thanh Buoi bus station</p>
+                            </div>
+                            <div class="card mid">                        
+                                <h4 style="color: red">9th Sep 22:30 Evening</h4>
                                 <p>Gather at Thanh Buoi bus station</p>
-                                
-                                
                             </div>
 
                             <!-- 10th Sep -->
