--- a/travel.html
+++ b/travel.html
@@ -24,6 +24,7 @@
                         <div class="lines">
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
@@ -60,17 +61,13 @@
                         <div class="cards">
                             <div class="card mid">                        
                                 <h4 style="color: red">9th Sep 22:30 Evening</h4>
-                                <p>Gather at Thanh Buoi bus station</p>
+                                <p>Gather at Thanh Buoi bus station at Le Hong Phong</p>
                             </div>
                             <div class="card mid">                        
-                                <h4 style="color: red">9th Sep 22:30 Evening</h4>
-                                <p>Gather at Thanh Buoi bus station</p>
+                                <h4 style="color: red">9th Sep 22:45 Evening</h4>
+                                <p>Gather at Thanh Buoi bus station at Van Thanh</p>
                             </div>
-                            <div class="card mid">                        
-                                <h4 style="color: red">9th Sep 22:30 Evening</h4>
-                                <p>Gather at Thanh Buoi bus station</p>
-                            </div>
-
+                            
                             <!-- 10th Sep -->
                             <div class="card mid">
                                 <h4 style="color: red">10th Sep 04:30 Morning</h4>
