--- a/travel.html
+++ b/travel.html
@@ -27,9 +27,9 @@
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
@@ -64,7 +64,7 @@
                                 <p>Gather at Thanh Buoi bus station at Le Hong Phong</p>
                             </div>
                             <div class="card mid">                        
-                                <h4 style="color: red">9th Sep 22:45 Evening</h4>
+                                <h4>9th Sep 22:45 Evening</h4>
                                 <p>Gather at Thanh Buoi bus station at Van Thanh</p>
                             </div>
                             
