--- a/travel.html
+++ b/travel.html
@@ -33,7 +33,7 @@
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="dot"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
