--- a/travel.html
+++ b/travel.html
@@ -46,7 +46,9 @@
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="line"></div>
                         <div class="dot"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         </div>                    
@@ -135,6 +137,11 @@
                                 <h4>11st Sep 13:00 Afternoon</h4>
                                 <p>Xe trung chuyển đến đón ra bến</p>
                             </div>
+                            <div class="card mid">
+                                <h4>11st Sep 14:00 Afternoon</h4>
+                                <p>Back to SaiGon City</p>
+                            </div>
+                            
                             <div class="card mid">
                                 <h4>11st Sep 14:00 Afternoon</h4>
                                 <p>Back to SaiGon City</p>
