--- a/travel.html
+++ b/travel.html
@@ -24,13 +24,6 @@
                         <div class="lines">
                         <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="dot"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
@@ -43,12 +36,12 @@
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
-                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="dot"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         </div>                    
@@ -141,9 +134,8 @@
                                 <h4>11st Sep 14:00 Afternoon</h4>
                                 <p>Back to SaiGon City</p>
                             </div>
-                            
                             <div class="card mid">
-                                <h4>11st Sep 14:00 Afternoon</h4>
+                                <h4>11st Sep 21:00 Evening</h4>
                                 <p>Back to SaiGon City</p>
                             </div>
                         </div> 
