--- a/travel.html
+++ b/travel.html
@@ -24,6 +24,13 @@
                         <div class="lines">
                         <div class="dot"></div>
                         <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
@@ -32,16 +39,16 @@
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
+                        <div class="line"></div>.
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="dot"></div>
-                        <div class="line"></div>
-                        <div class="dot"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
                         </div>                    
