--- a/travel.html
+++ b/travel.html
@@ -39,7 +39,7 @@
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
-                        <div class="line"></div>.
+                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
