--- a/travel.html
+++ b/travel.html
@@ -51,6 +51,9 @@
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
                         </div>                    
                         <div class="cards">
                             <div class="card mid">                        
@@ -143,7 +146,7 @@
                             </div>
                             <div class="card mid">
                                 <h4>11st Sep 21:00 Evening</h4>
-                                <p>Back to SaiGon City</p>
+                                <p>At HCM City</p>
                             </div>
                         </div> 
                     </div>
