--- a/travel.html
+++ b/travel.html
@@ -130,6 +130,10 @@
                                 <h4>11st Sep 12:00 Midday</h4>
                                 <p>Check out hotel</p>
                             </div>
+                            <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
+                            </div>
                         </div> 
                     </div>
                     
