--- a/travel.html
+++ b/travel.html
@@ -48,6 +48,7 @@
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
+                        <div class="dot"></div>
                         </div>                    
                         <div class="cards">
                             <div class="card mid">                        
@@ -129,6 +130,10 @@
                             <div class="card mid">
                                 <h4>11st Sep 12:00 Midday</h4>
                                 <p>Check out hotel</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
                             </div>
                             <div class="card mid">
                                 <h4>11st Sep 12:00 Evening</h4>
