--- a/travel.html
+++ b/travel.html
@@ -139,6 +139,10 @@
                                 <h4>11st Sep 12:00 Evening</h4>
                                 <p>At HCM City</p>
                             </div>
+                             <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
+                            </div>
                         </div> 
                     </div>
                     
