--- a/travel.html
+++ b/travel.html
@@ -15,6 +15,142 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M-38.5 196C-38.5 196 34 91 133.5 91C233 91 427 159 532.5 30C638 -99 518 236 518 236L-49 246.5L-38.5 196Z" fill="#FF768E"/>
                 </svg>
             </div>
+
+            <div class="timeline">                
+                <h3>Travel HoChiMinh City to Dallas City</h3>
+                <label>From 9th Sep to 11st Sep</label>
+                <div class="box">
+                    <div class="container">
+                        <div class="lines">
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>
+                        </div>                    
+                        <div class="cards">
+                            <div class="card mid">                        
+                                <h4 style="color: red">9th SEP 22:30 EVENING</h4>
+                                <p>Gather at Thanh Buoi bus station at Van Thanh</p>
+                            </div>
+                            
+                            <!-- 10th Sep -->
+                            <div class="card mid">
+                                <h4 style="color: red">10th SEP 05:00 MORNING</h4>
+                                <p>Check in Villa Hoa Cam Tu Cau</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 07:00 Morning</h4>
+                                <p>Breakfast</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 08:00 Morning</h4>
+                                <p>Visit Linh Phuoc Pagoda</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 09:00 Morning</h4>
+                                <p>Moc Tra Farm Coffee Da Lat <br>Cau Dat Tea Hill</p>
+                            </div>
+                            <div class="card mid">
+                                <h4 style="color: rgb(230, 36, 155)">10th SEP 12:00 MIDDAY</h4>
+                                <p>Lunch</p>
+                            </div>
+                            <div class="card mid">
+                                <h4 style="color: rgb(230, 36, 155)">10th SEP 13:30 AFTERNOON</h4>
+                                <p>Go to Lonely Pine Tree by Cano </p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 15:00 Afternoon</h4>
+                                <p>Visit Huy house's</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 16:00 Afternoon</h4>
+                                <p>Dalat Golf Coffee <br> or Horrizon Coffee</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 18:00 Afternoon</h4>
+                                <p>Back to Villa</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 19:00 Evening</h4>
+                                <p>BBQ Dinner and drinking</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 21:00 Evening</h4>
+                                <p>Chợ đêm, sữa đầu nành, <br>xe đạp đôi, bánh tráng nướng</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>10th Sep 23:00</h4>
+                                <p>Back to hotel</p>
+                            </div>
+
+                            <!-- 11st Sep -->
+                            <div class="card mid">
+                                <h4 style="color: red">11st Sep 04:00 Morning</h4>
+                                <p>Săn mây đồi đa Phú</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 07:00 Morning</h4>
+                                <p>Breakfast</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 08:00 Morning</h4>
+                                <p>Coffee <br> or mua đặc sản Đà Lạt</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 11:00 Midday</h4>
+                                <p>Lunch <br>and back to hotel</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 12:00 Midday</h4>
+                                <p>Check out hotel</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
+                            </div>
+                            <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
+                            </div>
+                             <div class="card mid">
+                                <h4>11st Sep 12:00 Evening</h4>
+                                <p>At HCM City</p>
+                            </div>
+                        </div> 
+                    </div>
+                    
+                    <!-- <div class="bottom">
+                        <div class="btn">Show all updates</div> -->
+                        <!-- <p>Tiền xe | 540,000 (2 chiều) </p>
+                        <p>Tiền phòng | 250,000</p>
+                        <p>Thuê xe | 120,000 (2 ngày)</p>
+                        <p>Xăng | 50,000</p> 
+                        <p>Coffee, Ăn uống | 540,000</p>
+                        <p><b>Dự trù chi phí: 1,500,000/ người</b></p>
+                    </div> -->
+                </div>
+            </div>
         </div>
         <!-- partial -->
     </body>
