--- a/travel.html
+++ b/travel.html
@@ -35,6 +35,7 @@
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="line"></div>
+                        <div class="line"></div>
                         <div class="dot"></div>
                         <div class="line"></div>
                         <div class="line"></div>
