--- a/travel.html
+++ b/travel.html
@@ -61,15 +61,15 @@
                                 <p>Check in Villa Hoa Cam Tu Cau</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 07:00 Morning</h4>
+                                <h4>10th SEP 07:00 MORNING</h4>
                                 <p>Breakfast</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 08:00 Morning</h4>
+                                <h4>10th SEP 08:00 MORNING</h4>
                                 <p>Visit Linh Phuoc Pagoda</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 09:00 Morning</h4>
+                                <h4>10th SEP 09:00 MORNING</h4>
                                 <p>Moc Tra Farm Coffee Da Lat <br>Cau Dat Tea Hill</p>
                             </div>
                             <div class="card mid">
@@ -81,41 +81,41 @@
                                 <p>Go to Lonely Pine Tree by Cano </p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 15:00 Afternoon</h4>
+                                <h4>10th SEP 15:00 AFTERNOON</h4>
                                 <p>Visit Huy house's</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 16:00 Afternoon</h4>
+                                <h4>10th SEP 16:00 AFTERNOON</h4>
                                 <p>Dalat Golf Coffee <br> or Horrizon Coffee</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 18:00 Afternoon</h4>
+                                <h4>10th SEP 18:00 AFTERNOON</h4>
                                 <p>Back to Villa</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 19:00 Evening</h4>
+                                <h4 style="color: rgb(230, 36, 155)">10th SEP 19:00 EVENING</h4>
                                 <p>BBQ Dinner and drinking</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 21:00 Evening</h4>
+                                <h4>10th SEP 21:00 EVENING</h4>
                                 <p>Chợ đêm, sữa đầu nành, <br>xe đạp đôi, bánh tráng nướng</p>
                             </div>
                             <div class="card mid">
-                                <h4>10th Sep 23:00</h4>
-                                <p>Back to hotel</p>
+                                <h4>10th SEP 23:00 EVENING</h4>
+                                <p>Back to Villa</p>
                             </div>
 
                             <!-- 11st Sep -->
                             <div class="card mid">
-                                <h4 style="color: red">11st Sep 04:00 Morning</h4>
+                                <h4 style="color: red">11st Sep 04:00 MORNING</h4>
                                 <p>Săn mây đồi đa Phú</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 07:00 Morning</h4>
+                                <h4>11st Sep 07:00 MORNING</h4>
                                 <p>Breakfast</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 08:00 Morning</h4>
+                                <h4>11st Sep 08:00 MORNING</h4>
                                 <p>Coffee <br> or mua đặc sản Đà Lạt</p>
                             </div>
                             <div class="card mid">
@@ -127,15 +127,15 @@
                                 <p>Check out hotel</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 12:00 Evening</h4>
+                                <h4>11st Sep 12:00 EVENING</h4>
                                 <p>At HCM City</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 12:00 Evening</h4>
+                                <h4>11st Sep 12:00 EVENING</h4>
                                 <p>At HCM City</p>
                             </div>
                              <div class="card mid">
-                                <h4>11st Sep 12:00 Evening</h4>
+                                <h4>11st Sep 12:00 EVENING</h4>
                                 <p>At HCM City</p>
                             </div>
                         </div> 
