--- a/travel.html
+++ b/travel.html
@@ -98,7 +98,7 @@
                             </div>
                             <div class="card mid">
                                 <h4>10th SEP 21:00 EVENING</h4>
-                                <p>Chợ đêm, sữa đầu nành, <br>xe đạp đôi, bánh tráng nướng</p>
+                                <p>Night market, Soy milk, <br>Double bike, Baked rice paper</p>
                             </div>
                             <div class="card mid">
                                 <h4>10th SEP 23:00 EVENING</h4>
@@ -108,7 +108,7 @@
                             <!-- 11st Sep -->
                             <div class="card mid">
                                 <h4 style="color: red">11st Sep 04:00 MORNING</h4>
-                                <p>Săn mây đồi đa Phú</p>
+                                <p>Hunting clouds in Da Phu Hill</p>
                             </div>
                             <div class="card mid">
                                 <h4>11st Sep 07:00 MORNING</h4>
@@ -116,26 +116,26 @@
                             </div>
                             <div class="card mid">
                                 <h4>11st Sep 08:00 MORNING</h4>
-                                <p>Coffee <br> or mua đặc sản Đà Lạt</p>
+                                <p>Coffee <br> or Buy Dalat specialties</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 11:00 Midday</h4>
-                                <p>Lunch <br>and back to hotel</p>
+                                <h4 style="color: rgb(230, 36, 155)">11st SEP 11:00 MIDDAY</h4>
+                                <p>Lunch <br>and Back to Villa</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 12:00 Midday</h4>
-                                <p>Check out hotel</p>
+                                <h4>11st SEP 12:00 MIDDAY</h4>
+                                <p>Check out Villa</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 12:00 EVENING</h4>
-                                <p>At HCM City</p>
+                                <h4 style="color: rgb(230, 36, 155)">11st SEP 13:00 AFTERNOON</h4>
+                                <p>Gather at Thanh Buoi bus station</p>
                             </div>
                             <div class="card mid">
-                                <h4>11st Sep 12:00 EVENING</h4>
-                                <p>At HCM City</p>
+                                <h4>11st SEP 14:00 AFTERNOON</h4>
+                                <p>Go from Dalat City to HCM City</p>
                             </div>
                              <div class="card mid">
-                                <h4>11st Sep 12:00 EVENING</h4>
+                                <h4 style="color: rgb(230, 36, 155)">11st SEP 21:00 EVENING</h4>
                                 <p>At HCM City</p>
                             </div>
                         </div> 
