--- a/travel.html
+++ b/travel.html
@@ -48,6 +48,9 @@
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="line"></div>
+                        <div class="dot"></div>   
                         </div>                    
                         <div class="cards">
                             <div class="card mid">                        
