--- a/travel.html
+++ b/travel.html
@@ -48,7 +48,7 @@
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>
-                        <div class="dot"></div>
+                        <div class="line"></div>
                         <div class="line"></div>
                         <div class="dot"></div>   
                         </div>                    
